@@ -32,6 +32,5 @@ Global
 		$0.ChangeLogPolicy = $5
 		$5.UpdateMode = ProjectRoot
 		$5.inheritsSet = Mono
-		version = 0.1
 	EndGlobalSection
 EndGlobal
