@@ -1,3 +1,9 @@
+2009-10-01  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Debugger.Gdb.sln: 
+
+	* GdbSession.cs: Don't crash if a breakpoint can't be set.
+
 2009-08-20  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Debugger.csproj:
